<?xml version="1.0"?>
<package>
  <name>orbit_camera_actuator</name>
  <version>1.0.0</version>
  <description>Package to control the Orbit camera through libwebcam.</description>
  <author email="a.nilsson@gmail.com">Adam Nilsson</author>

  <maintainer email="andrea@cds.caltech.edu">Andrea Censi</maintainer>
  <url type="repository">https://github.com/AndreaCensi/orbit_camera_actuator</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
